--- a/emacs.org
+++ b/emacs.org
@@ -1415,7 +1415,7 @@ Define a hydra to start/switch between applications.
     (defhydra hydra-app-selector (:color blue)
       "application"
       ("e" notmuch "email")
-      ("r" elfeed "elfeed")
+      ("f" elfeed "elfeed")
       ("t" twit "twitter")
       ("j" jabber-connect-all "jabber")
       ("s" ansi-term "shell")
