--- a/emacs.org
+++ b/emacs.org
@@ -217,6 +217,7 @@ little easier.
     "update all installed packages"
     (interactive)
     (save-window-excursion
+      (package-refresh-contents)
       (package-list-packages t)
       (package-menu-mark-upgrades)
       (package-menu-execute t)
@@ -1342,7 +1343,7 @@ from [[http://oremacs.com/2015/02/04/pre-hydra-post/][oremacs.com]].
              (windmove-down)) "horz")
       ("t" transpose-frame "'")
       ("o" delete-other-windows "one" :color blue)
-      ("a" ace-window "ace")
+      ("a" ace-window "ace" :color blue)
       ("s" ace-swap-window "swap")
       ("d" ace-delete-window "del")
       ("i" ace-maximize-window "ace-one" :color blue)
