--- a/emacs.org
+++ b/emacs.org
@@ -569,6 +569,7 @@ other news-reading utility.
            ("http://kitchingroup.cheme.cmu.edu/blog/feed/atom/" emacs )
            ("http://planetsysadmin.com/atom.xml" devops)
            ("http://planet.fedoraproject.org/atom.xml" linux fedora)
+           ("http://planet.centos.org/atom.xml" linux centos)
            ("http://kernelplanet.org/rss20.xml" linux )
            ("http://devopsreactions.tumblr.com/rss" devops fun)
            ("http://planet.freedesktop.org/rss20.xml" linux )
@@ -1696,15 +1697,16 @@ Define various keybindings.
         notmuch-hello-thousands-separator ","
         notmuch-search-oldest-first nil
         notmuch-show-part-button-default-action 'notmuch-show-view-part
-        notmuch-saved-searches '(
-                                  ("inbox" . "tag:inbox")
-                                  ("today" . "date:today..now and not tag:archive")
-                                  ("7 days" . "date:7d..now and not tag:archive")
-                                  ("announce" . "tag:announce and not tag:archive and tag:unread")
-                                  ("reports" . "tag:reports")
-                                  ("lists" . "tag:lists and not tag:archive")
-                                  ("noc active" . "tag:noc and not tag:archive")
-                                  )
+        notmuch-saved-searches 
+        '(
+           (:name "inbox"    :key "i" :query "tag:inbox")
+           (:name "today"    :key "t" :query "date:today..now and not tag:archive")
+           (:name "7 days"   :key "7" :query "date:7d..now and not tag:archive")
+           (:name "announce" :key "a" :query "tag:announce and not tag:archive and tag:unread")
+           (:name "reports"  :key "r" :query "tag:reports")
+           (:name "lists"    :key "l" :query "tag:lists and not tag:archive")
+           (:name "noc"      :key "n" :query "tag:noc and not tag:archive")
+           )
         )
       (when (not (string= system-name sf/work-workstation))
         (setq notmuch-command "~/bin/notmuch-remote.sh"))
