--- a/emacs.org
+++ b/emacs.org
@@ -575,6 +575,7 @@ other news-reading utility.
            ("http://planet.freedesktop.org/rss20.xml" linux )
            ("http://www.humansofnewyork.com/rss" fun)
            ("http://americasgreatoutdoors.tumblr.com/rss" fun)
+           ("http://pragmaticemacs.com/feed/" emacs)
            ))
       (dolist (mode '(elfeed-show-mode elfeed-search-mode))
         (evil-set-initial-state mode 'emacs))
