--- a/emacs.org
+++ b/emacs.org
@@ -1025,6 +1025,25 @@ Keybindings of interest:
     )
 #+END_SRC
 
+*** Web development
+
+[[http://web-mode.org/][web-mode]] is an Emacs mode for editing web pages and templates, in
+particular [[http://jinja.pocoo.org/][Jinja]].
+
+#+BEGIN_SRC emacs-lisp
+  (use-package web-mode
+    :ensure t
+    :init
+    (progn
+      (setq 
+        web-mode-css-indent-offset 2
+        web-mode-markup-indent-offset 2
+        web-mode-code-indent-offset 2
+        )
+      (add-to-list 'auto-mode-alist '("\\.html\\'" . web-mode))
+      ))
+#+END_SRC
+
 *** Window Management
 
 [[https://github.com/abo-abo/ace-window][ace-window]] is a mechanism to quickly switch between windows in an Emacs
