elfeed subscription updates

--- a/emacs.org
+++ b/emacs.org
@@ -562,8 +562,7 @@ other news-reading utility.
            ("http://endlessparentheses.com/atom.xml" emacs)
            ("http://planet.emacsen.org/atom.xml" emacs)
            ("http://oremacs.com/atom.xml" emacs)
-           ("http://xkcd.com/atom.xml" comics fun)
-           ("https://what-if.xkcd.com/feed.atom" fun)
+           ("http://pragmaticemacs.com/feed/" emacs)
            ("http://mbork.pl/?action=rss" emacs )
            ("http://www.howardism.org/index.xml" emacs )
            ("http://kitchingroup.cheme.cmu.edu/blog/feed/atom/" emacs )
@@ -572,11 +571,15 @@ other news-reading utility.
            ("http://planet.fedoraproject.org/atom.xml" linux fedora)
            ("http://planet.centos.org/atom.xml" linux centos)
            ("http://kernelplanet.org/rss20.xml" linux )
-           ("http://devopsreactions.tumblr.com/rss" devops fun)
            ("http://planet.freedesktop.org/rss20.xml" linux )
+           ("http://devopsreactions.tumblr.com/rss" devops fun)
+           ("http://feeds.networklore.com/Networklore" netops )
+           ("http://packetpushers.net/category/blogs/feed/" netops)
+           ("http://etherealmind.com/feed/" netops)
            ("http://www.humansofnewyork.com/rss" fun)
+           ("http://xkcd.com/atom.xml" comics fun)
+           ("https://what-if.xkcd.com/feed.atom" fun)
            ("http://americasgreatoutdoors.tumblr.com/rss" fun)
-           ("http://pragmaticemacs.com/feed/" emacs)
            ))
       (dolist (mode '(elfeed-show-mode elfeed-search-mode))
         (evil-set-initial-state mode 'emacs))
