add masteringemacs.org feed

--- a/emacs.org
+++ b/emacs.org
@@ -567,6 +567,7 @@ other news-reading utility.
            ("http://www.howardism.org/index.xml" emacs )
            ("http://kitchingroup.cheme.cmu.edu/blog/feed/atom/" emacs )
            ("http://sachachua.com/blog/feed" emacs )
+           ("https://www.masteringemacs.org/feed" emacs )
            ("http://planetsysadmin.com/atom.xml" devops)
            ("http://planet.fedoraproject.org/atom.xml" linux fedora)
            ("http://planet.centos.org/atom.xml" linux centos)
