--- a/emacs.org
+++ b/emacs.org
@@ -775,17 +775,19 @@ _info_ and [[http://magit.github.io/master/magit.html][online]].  This also inst
 navigating a file's history in [[http://git-scm.com/][git]].
 
 #+BEGIN_SRC emacs-lisp
-    (use-package magit
-      :ensure t
-      :init
-      (progn
-        (setq 
-          magit-completing-read-function 'ivy-completing-read
-          magit-last-seen-setup-instructions "1.4.0")
-        )
-      :commands magit-status
-      :bind ("C-x g" . magit-status))
-    (sf/package-install 'git-timemachine)
+  (use-package magit
+    :ensure t
+    :init
+    (progn
+      (setq
+        magit-completing-read-function 'ivy-completing-read
+        magit-last-seen-setup-instructions "1.4.0")
+      (dolist (mode '(magit-mode magit-popup-mode))
+        (evil-set-initial-state mode 'emacs))
+      )
+    :commands magit-status
+    :bind ("C-x g" . magit-status))
+  (sf/package-install 'git-timemachine)
 #+END_SRC
 
 *** Music with EMMS
